--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		          <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
 			          <div class="col-md-10 text-center ftco-animate">
 			          	<div class="text w-100">
-			          		<h2>We are best Roofing Services</h2>
+			          		<h2>We offer best Roofing Services</h2>
 				            <h1 class="mb-4">Dedicated to providing the highest quality roofing services</h1>
 				            <h2><a href="tel://13474848860" class="btn btn-primary">CALL: 347-484-8860</a></h2>
 			            </div>
