--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 			          		<h2>We offer best Roofing Services</h2>
 				            <h1 class="mb-4">Dedicated to providing the highest quality roofing services</h1>
 				            <h2><a href="tel://13474848860" class="btn btn-primary">CALL: 347-484-8860</a></h2>
+							<h2><a href="mailto:newyorkcityroofinggc@gmail.com" class="btn btn-primary">EMAIL: newyorkcityroofinggc@gmail.com</a></h2>
+							
 			            </div>
 			          </div>
 			        </div>
@@ -72,44 +74,7 @@
 		<section class="ftco-section bg-light">
 			<div class="container">
 				<div class="row justify-content-center">
-						<div class="col-md-12">
-							<div class="wrapper">
-								<div class="row no-gutters">
-									<div class="col-md-7 d-flex">
-										<div class="contact-wrap w-100 p-md-5 p-4">
-											<h3 class="mb-4">Get in touch</h3>
-											<form method="POST" id="contactForm" class="contactForm">
-												<div class="row">
-													<div class="col-md-6">
-														<div class="form-group">
-															<input type="text" class="form-control" name="name" id="name" placeholder="Name">
-														</div>
-													</div>
-													<div class="col-md-6"> 
-														<div class="form-group">
-															<input type="email" class="form-control" name="email" id="email" placeholder="Email">
-														</div>
-													</div>
-													<div class="col-md-12">
-														<div class="form-group">
-															<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
-														</div>
-													</div>
-													<div class="col-md-12">
-														<div class="form-group">
-															<textarea name="message" class="form-control" id="message" cols="30" rows="7" placeholder="Message"></textarea>
-														</div>
-													</div>
-													<div class="col-md-12">
-														<div class="form-group">
-															<input type="submit" value="Send Message" class="btn btn-primary">
-															<div class="submitting"></div>
-														</div>
-													</div>
-												</div>
-											</form>
-										</div>
-									</div>
+
 									<div class="col-md-5 d-flex align-items-stretch">
 										<div class="info-wrap bg-primary w-100 p-lg-5 p-4">
 											<h3 class="mb-4 mt-md-4">Contact us</h3>
@@ -126,7 +91,7 @@
 											<span class="fa fa-phone"></span>
 										</div>
 										<div class="text pl-3">
-										<p><span>Phone:</span> <a href="tel://1234567920">+ 347 484 8860</a></p>
+										<p><span>Phone:</span> <a href="tel://3474848860">+ 347 484 8860</a></p>
 									  </div>
 								  </div>
 									<div class="dbox w-100 d-flex align-items-center">
@@ -134,8 +99,7 @@
 											<span class="fa fa-paper-plane"></span>
 										</div>
 										<div class="text pl-3">
-										<p><span>Email:</span> <a href="mailto:newyorkcityroofinggc@gmail.com">newyorkcityroofinggc@gmail.com
-										</a></p>
+										<p><span>Email:</span> <a href="mailto:newyorkcityroofinggc@gmail.com">newyorkcityroofinggc@gmail.com</a></p>
 									  </div>
 								  </div>
 									<div class="dbox w-100 d-flex align-items-center">
