--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 			          		<h2>We offer best Roofing Services</h2>
 				            <h1 class="mb-4">Dedicated to providing the highest quality roofing services</h1>
 				            <h2><a href="tel://13474848860" class="btn btn-primary">CALL: 347-484-8860</a></h2>
-							<h5><a href="mailto:newyorkcityroofinggc@gmail.com" class="btn btn-primary">newyorkcityroofinggc@gmail.com</a></h5>
-							
+							<p><a href="mailto:newyorkcityroofinggc@gmail.com" class="btnn btn-primary">newyorkcityroofinggc@gmail.com</a></p>
+				
 			            </div>
 			          </div>
 			        </div>
@@ -180,7 +180,7 @@
             <div class="block-18 text-center">
               <div class="text">
               	<div class="icon"><span class="fa fa-users"></span></div>
-                <strong class="number" data-number="2342">0</strong>
+                <strong class="number" data-number="7851">0</strong>
               	<span>Happy Clients</span>
               </div>
             </div>
