--- a/index.html
+++ b/index.html
@@ -500,9 +500,7 @@ Everything that we wanted was done. Very satisfied with the work, workmanship, a
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
                   <div class="text">
-                    <p class="mb-4">Our house was in need of a brand-new roof.we had talk to one other company to get a bed. However, what we found was, that some companies do not always include everything in the bed. Not with preferred roofing. The owner himself came out to do the estimate. He was extremely professional he explained everything to us. I should also say, I am visually impaired, so he was very descriptive, and read to me all the forms that I would need to sign if I were to go with this company. He showed me all of the licenses, and explain what they were.explained in great detail what kind of roof he would recommend and why. After going over everything, he gave me an estimate of what the job would cost. He also explained, that there might be some additional charges and he listed what they would before. So, I decided to go with this company. And, I’m very happy I did. The people who installed my roof when not only very friendly, but they did a thorough job. This company does not contract out.their own employees. After each day of the job, everything was clean and put back to the way it was. I would definitely recommend preferred roofing to anyone who needs a new roof. If I ever need another roof, I will definitely be calling them.
-						Description of work:
-						This company repairs and installs only roofs. They are licensed bonded and insured.</p>
+                    <p class="mb-4">I am so happy with my new roof installed by NYCRoofing. It was best roofing experience I have every had. NYCRoofing crew was extremely professional, quick, efficient and quick. Thank you NYCRoofing, will recommend to others.</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
