--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ Everything that we wanted was done. Very satisfied with the work, workmanship, a
                 <div class="testimony-wrap py-4">
                 	<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-quote-left"></span></div>
                   <div class="text">
-                    <p class="mb-4">I am so happy with my new roof installed by NYCRoofing. It was best roofing experience I have every had. NYCRoofing crew was extremely professional, quick, efficient and quick. Thank you NYCRoofing, will recommend to others.</p>
+                    <p class="mb-4">I am so happy with my new roof installed by NYCRoofing. It was best roofing experience I have ever had. NYCRoofing crew was extremely professional, efficient and quick. Thank you NYCRoofing, will recommend to others.</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
