--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			          		<h2>We offer best Roofing Services</h2>
 				            <h1 class="mb-4">Dedicated to providing the highest quality roofing services</h1>
 				            <h2><a href="tel://13474848860" class="btn btn-primary">CALL: 347-484-8860</a></h2>
-							<p><a href="mailto:newyorkcityroofinggc@gmail.com" class="btnn btn-primary">newyorkcityroofinggc@gmail.com</a></p>
+							<p><a href="mailto:newyorkcityroofinggc@gmail.com" class="btn btn-primary">newyorkcityroofinggc@gmail.com</a></p>
 				
 			            </div>
 			          </div>
