--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@ Everything that we wanted was done. Very satisfied with the work, workmanship, a
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon fa fa-map-marker"></span><span class="text"> 198 West 21th Street, Suite 721 New York NY 10016</span></li>
-	                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text"> 347 484 8860</span></a></li>
-	                <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text"> newyorkcityroofinggc@gmail.com</span></a></li>
+	                <li><a href="tel://13474848860"><span class="icon fa fa-phone"></span><span class="text"> 347 484 8860</span></a></li>
+	                <li><a href="mailto:newyorkcityroofinggc@gmail.com"><span class="icon fa fa-paper-plane"></span><span class="text"> newyorkcityroofinggc@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
