--- a/index.html
+++ b/index.html
@@ -556,12 +556,12 @@ Everything that we wanted was done. Very satisfied with the work, workmanship, a
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Services</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Skylights</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Waterproofing</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Industrial Roofing</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Residential Roofing</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Gutter Cleaning</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="fa fa-check mr-3"></span>Commercial Roofing</a></li>
+                <li><a class="py-1 d-block"><span class="fa fa-check mr-3"></span>Skylights</a></li>
+                <li><a class="py-1 d-block"><span class="fa fa-check mr-3"></span>Waterproofing</a></li>
+                <li><a class="py-1 d-block"><span class="fa fa-check mr-3"></span>Industrial Roofing</a></li>
+                <li><a class="py-1 d-block"><span class="fa fa-check mr-3"></span>Residential Roofing</a></li>
+                <li><a class="py-1 d-block"><span class="fa fa-check mr-3"></span>Gutter Cleaning</a></li>
+                <li><a class="py-1 d-block"><span class="fa fa-check mr-3"></span>Commercial Roofing</a></li>
               </ul>
             </div>
           </div>
