--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ Everything that we wanted was done. Very satisfied with the work, workmanship, a
           <div class="col-md-6 col-lg">
             <div class="ftco-footer-widget mb-4">
               <h2 class="logo"><a href="#"><span class="flaticon-roof-2 mr-2"></span>NYCRoofing.net</a></h2>
-              <p>We are a roofing company serving NYC area with over 45 years in the business!! Call us for all of your Roofing needs!! </p>
+              <p>We are a roofing company serving NYC area with over 45 years in the business!! Call us for all of your Roofing needs! </p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
               </ul>
             </div>
