--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 											<span class="fa fa-map-marker"></span>
 										</div>
 										<div class="text pl-3">
-										<p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+										<p><span>Address:</span> 249 E53rd New York NY 10022</p>
 									  </div>
 								  </div>
 									<div class="dbox w-100 d-flex align-items-center">
@@ -587,7 +587,7 @@ Everything that we wanted was done. Very satisfied with the work, workmanship, a
             	<h2 class="ftco-heading-2">Contact information</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon fa fa-map-marker"></span><span class="text"> 198 West 21th Street, Suite 721 New York NY 10016</span></li>
+	                <li><span class="icon fa fa-map-marker"></span><span class="text"> 249 E53rd New York NY 10022</span></li>
 	                <li><a href="tel://13474848860"><span class="icon fa fa-phone"></span><span class="text"> 347 484 8860</span></a></li>
 	                <li><a href="mailto:newyorkcityroofinggc@gmail.com"><span class="icon fa fa-paper-plane"></span><span class="text"> newyorkcityroofinggc@gmail.com</span></a></li>
 	              </ul>
